update for other positions
best model and last tasks included in the code

--- a/Human Activity Recognition using machine learning and accelerometer/3.modeling_LOSO.ipynb
+++ b/Human Activity Recognition using machine learning and accelerometer/3.modeling_LOSO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "8b18e7a3",
    "metadata": {},
    "outputs": [
@@ -13,19 +13,19 @@
       "Index(['mean', 'std', 'skewness', 'max', 'min', 'range', 'psd_sum', 'psd_max',\n",
       "       'majority_activity', 'participant'],\n",
       "      dtype='object')\n",
-      "            mean       std  skewness        max       min      range  \\\n",
-      "6171   10.590860  4.612359  0.220705  21.836725  1.602871  20.233853   \n",
-      "5751    9.736181  1.646264  0.709320  16.937265  3.546427  13.390838   \n",
-      "11321  10.236589  3.540561  0.788747  25.902412  1.405465  24.496947   \n",
-      "136    11.509971  4.514833  0.474278  26.922697  2.613561  24.309136   \n",
-      "3383    9.717137  1.981594 -0.091813  15.703103  4.842198  10.860905   \n",
+      "           mean       std  skewness        max       min      range  \\\n",
+      "355   13.002116  6.962177  0.362138  27.687688  1.243111  26.444576   \n",
+      "1674  12.729129  6.626254  0.134843  30.377122  2.016261  28.360861   \n",
+      "5930  10.298542  3.674886  0.041292  24.049964  1.790891  22.259073   \n",
+      "1016  10.939616  4.305405  0.449106  27.691754  0.987261  26.704494   \n",
+      "5977  10.726619  4.228890  0.084861  23.758895  1.323203  22.435692   \n",
       "\n",
-      "          psd_sum    psd_max majority_activity  participant  \n",
-      "6171   106.447740  20.736630        downstairs            5  \n",
-      "5751    11.418285   0.804521            biking            5  \n",
-      "11321   65.960149  11.287410        downstairs            9  \n",
-      "136    101.829447  18.321797           walking            1  \n",
-      "3383    19.758703   8.309464            biking            3  \n",
+      "         psd_sum    psd_max majority_activity  participant  \n",
+      "355   240.740051  58.929035           jogging            1  \n",
+      "1674  222.153285  46.165726           jogging            2  \n",
+      "5930   63.523286  10.114990            biking            5  \n",
+      "1016   92.440385  22.259277          upstairs            1  \n",
+      "5977   92.588283  21.944426          upstairs            5  \n",
       "Participants found: [ 1  2  3  4  5  6  7  8  9 10]\n"
      ]
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "848e967b",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "047986e7",
    "metadata": {},
    "outputs": [
@@ -186,22 +186,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best parameters found: {'C': 1, 'gamma': 0.01, 'kernel': 'rbf'}\n",
-      "Best cross-validation accuracy: 0.721\n",
-      "Test accuracy with best SVM: 0.819\n",
+      "Best parameters found: {'C': 0.1, 'gamma': 0.01, 'kernel': 'poly'}\n",
+      "Best cross-validation accuracy: 0.759\n",
+      "Test accuracy with best SVM: 0.810\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "      biking       0.96      1.00      0.98       181\n",
-      "  downstairs       0.37      0.13      0.20       181\n",
-      "     jogging       0.99      0.99      0.99       181\n",
-      "     sitting       0.99      0.92      0.96       179\n",
-      "    standing       0.96      0.97      0.97       180\n",
-      "    upstairs       0.53      0.87      0.66       179\n",
-      "     walking       0.82      0.85      0.84       179\n",
+      "      biking       0.97      0.97      0.97       181\n",
+      "  downstairs       0.49      0.61      0.55       171\n",
+      "     jogging       0.99      0.97      0.98       181\n",
+      "     sitting       1.00      0.96      0.98       179\n",
+      "    standing       0.99      0.99      0.99       180\n",
+      "    upstairs       0.72      1.00      0.83       179\n",
+      "     walking       0.30      0.12      0.18       170\n",
       "\n",
-      "    accuracy                           0.82      1260\n",
-      "   macro avg       0.80      0.82      0.80      1260\n",
-      "weighted avg       0.80      0.82      0.80      1260\n",
+      "    accuracy                           0.81      1241\n",
+      "   macro avg       0.78      0.80      0.78      1241\n",
+      "weighted avg       0.79      0.81      0.79      1241\n",
       "\n"
      ]
     }
@@ -220,10 +220,10 @@
     "}\n",
     "\n",
     "param_grid_reduced = {\n",
-    "    'C': [0.1, 1],\n",
+    "    'C': [0.1, 1, 10],\n",
     "    'gamma': ['scale', 0.01,0.025, 0.1, 0.05],\n",
-    "    'kernel': ['rbf']\n",
-    "    #\n",
+    "    'kernel': ['rbf', 'poly'],\n",
+    "    'degree': [2, 3]  \n",
     "}\n",
     "\n",
     "# Use a subset of the training data for speed if needed\n",
@@ -287,10 +287,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "415452b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Participant 1 - Accuracy: 0.692 - Best Params: {'criterion': 'entropy', 'max_depth': 10, 'max_features': 'log2', 'min_samples_split': 5, 'n_estimators': 150}\n",
+      "Participant 2 - Accuracy: 0.874 - Best Params: {'criterion': 'entropy', 'max_depth': 10, 'max_features': 'sqrt', 'min_samples_split': 10, 'n_estimators': 150}\n",
+      "Participant 3 - Accuracy: 0.813 - Best Params: {'criterion': 'entropy', 'max_depth': None, 'max_features': 'sqrt', 'min_samples_split': 5, 'n_estimators': 150}\n",
+      "Participant 4 - Accuracy: 0.685 - Best Params: {'criterion': 'entropy', 'max_depth': 10, 'max_features': 'sqrt', 'min_samples_split': 5, 'n_estimators': 150}\n",
+      "Participant 5 - Accuracy: 0.707 - Best Params: {'criterion': 'entropy', 'max_depth': 10, 'max_features': 'sqrt', 'min_samples_split': 10, 'n_estimators': 150}\n",
+      "Participant 6 - Accuracy: 0.873 - Best Params: {'criterion': 'entropy', 'max_depth': 10, 'max_features': 'sqrt', 'min_samples_split': 5, 'n_estimators': 150}\n",
+      "Participant 7 - Accuracy: 0.706 - Best Params: {'criterion': 'entropy', 'max_depth': 10, 'max_features': 'log2', 'min_samples_split': 5, 'n_estimators': 150}\n",
+      "Participant 8 - Accuracy: 0.821 - Best Params: {'criterion': 'entropy', 'max_depth': None, 'max_features': 'log2', 'min_samples_split': 10, 'n_estimators': 150}\n",
+      "Participant 9 - Accuracy: 0.800 - Best Params: {'criterion': 'entropy', 'max_depth': 10, 'max_features': 'sqrt', 'min_samples_split': 5, 'n_estimators': 150}\n",
+      "Participant 10 - Accuracy: 0.817 - Best Params: {'criterion': 'entropy', 'max_depth': 10, 'max_features': 'sqrt', 'min_samples_split': 5, 'n_estimators': 150}\n",
+      "\n",
+      "Mean LOSO Accuracy: 0.779\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import classification_report, accuracy_score\n",
